--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "npx expo start",
+    "start": "npx expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -13,7 +13,7 @@
     "@expo/config": "~8.5.0",
     "@expo/metro-config": "~0.17.1",
     "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-async-storage/async-storage": "^1.22.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -22,15 +22,17 @@
     "axios": "^1.6.7",
     "class-validator": "^0.14.1",
     "cross-fetch": "^4.0.0",
-    "expo": "~50.0.6",
-    "expo-av": "~13.10.5",
+    "expo": "~50.0.17",
+    "expo-av": "~13.10.6",
+    "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "graphql": "^16.8.1",
     "jsdom": "^24.0.0",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-icons": "^5.2.0",
+    "react-native": "0.73.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-heroicons": "^4.0.0",
@@ -48,11 +50,13 @@
     "redux-thunk": "^3.1.0",
     "start": "^5.1.0",
     "styled-components": "^6.1.8",
-    "tailwindcss": "^3.4.1",
+    "tailwind-rn": "^4.2.0",
+    "tailwindcss": "^3.3.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
     "typescript": "^5.1.3"
