--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,20 @@
     "@expo/metro-config": "~0.17.1",
     "@gorhom/bottom-sheet": "^4.6.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/blur": "^4.4.0",
+    "@react-native-vector-icons/ionicons": "^7.3.1-alpha.9",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.1.0",
+    "@shopify/react-native-skia": "^1.2.3",
     "@types/react-google-recaptcha": "^2.1.9",
     "axios": "^1.6.7",
     "class-validator": "^0.14.1",
     "cross-fetch": "^4.0.0",
     "expo": "~50.0.17",
     "expo-av": "~13.10.6",
+    "expo-blur": "^12.9.2",
     "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "graphql": "^16.8.1",
@@ -36,12 +40,14 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-heroicons": "^4.0.0",
+    "react-native-portalize": "^1.0.7",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^14.1.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0",
     "react-navigation-stack": "^2.10.4",
     "react-navigation-tabs": "^2.11.2",
