--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.2",
-    "@expo/config": "~8.5.0",
-    "@expo/metro-config": "~0.17.1",
+    "@expo/config": "~9.0.0",
+    "@expo/metro-config": "~0.18.1",
+    "@expo/ngrok": "^4.1.3",
     "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "^4.4.0",
     "@react-native-vector-icons/ionicons": "^7.3.1-alpha.9",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -25,28 +26,28 @@
     "axios": "^1.6.7",
     "class-validator": "^0.14.1",
     "cross-fetch": "^4.0.0",
-    "expo": "~50.0.17",
-    "expo-av": "~13.10.6",
-    "expo-blur": "^12.9.2",
-    "expo-linear-gradient": "^12.7.2",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-av": "~14.0.5",
+    "expo-blur": "~13.0.2",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
     "graphql": "^16.8.1",
     "jsdom": "^24.0.0",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-icons": "^5.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-heroicons": "^4.0.0",
     "react-native-portalize": "^1.0.7",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "^3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0",
     "react-navigation-stack": "^2.10.4",
@@ -61,9 +62,8 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@expo/ngrok": "^4.1.3",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
     "typescript": "^5.1.3"
   },
